--- a/BlazorWasm.MelodicJourneysOfCollin/Pages/LeftSidebar/PageLeftSidebar.razor
+++ b/BlazorWasm.MelodicJourneysOfCollin/Pages/LeftSidebar/PageLeftSidebar.razor
@@ -1,13 +1,9 @@
-﻿<!-- sidebar -->
-<div class="sidebar">
-    <!-- sidebar logo -->
+﻿<div class="sidebar">
     <div class="sidebar__logo">
         <NavLink href="">
             <img src="assets/img/logo.svg" />
         </NavLink>
     </div>
-    <!-- end sidebar logo -->
-    <!-- sidebar nav -->
     <ul style="margin-top: revert;">
         <li class="sidebar__nav-item">
             <NavLink href="" class="sidebar__nav-link sidebar__nav-link--active">
@@ -17,15 +13,5 @@
                 </svg> <span>Home</span>
             </NavLink>
         </li>
-        @* <li class="sidebar__nav-item"> *@
-        @*     <NavLink href="releases" class="sidebar__nav-link"> *@
-        @*         <svg xmlns="http://www.w3.org/2000/svg" *@
-        @*              viewBox="0 0 24 24"> *@
-        @*             <path d="M21.65,2.24a1,1,0,0,0-.8-.23l-13,2A1,1,0,0,0,7,5V15.35A3.45,3.45,0,0,0,5.5,15,3.5,3.5,0,1,0,9,18.5V10.86L20,9.17v4.18A3.45,3.45,0,0,0,18.5,13,3.5,3.5,0,1,0,22,16.5V3A1,1,0,0,0,21.65,2.24ZM5.5,20A1.5,1.5,0,1,1,7,18.5,1.5,1.5,0,0,1,5.5,20Zm13-2A1.5,1.5,0,1,1,20,16.5,1.5,1.5,0,0,1,18.5,18ZM20,7.14,9,8.83v-3L20,4.17Z" /> *@
-        @*         </svg> <span>Releases</span> *@
-        @*     </NavLink> *@
-        @* </li> *@
     </ul>
-    <!-- end sidebar nav -->
 </div>
-<!-- end sidebar -->
